# HQLint

./: .eslintrc.json  .gitignore  .vscodeignore  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  language-configuration.json  package-lock.json  package.json
crates/hql-ls/: Cargo.toml
crates/hql-ls/src/: completion.rs  config.rs  formatter.rs  linter.rs  main.rs
editors/code/: .vscodeignore  esbuild.js  package-lock.json  package.json  tsconfig.json
editors/code/src/: extension.ts  logger.ts
editors/code/src/test/: runTest.ts
editors/code/src/test/suite/: linterRules.test.ts
examples/: sample.hql  test_all_rules.hql  test_comments.hql  test_errors.hql  test_multiline.hql
notepad++/: HQL_UDL.xml
src/: diagnostics.ts  extension.ts  formatter.ts  hoverProvider.ts  linter.ts  signatureProvider.ts  snippets.ts
src/linter/rules/: baseRule.ts  hiveVariableRule.ts  index.ts  keywordCasingRule.ts  missingCommaRule.ts  parenthesesRule.ts  semicolonRule.ts  stringLiteralRule.ts  trailingWhitespaceRule.ts
src/test/suite/: extension.test.ts  index.ts  linterRules.test.ts  stringUtils.test.ts
src/utils/: stringUtils.ts
syntaxes/: hql.tmLanguage.json
