[package]
name = "hql-ls"
version = "0.1.0"
edition = "2024"
authors = ["HQL VSCode Team"]
description = "A Language Server for Hive QL (HQL)"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.54", features = ["serde"] }
anyhow = "1"
dashmap = "6" # For concurrent map access (document store)
ropey = "1.6" # For efficient text editing/handling
regex = "1.12.2"
sqlformat = "0.5.0"
